[Swagger] update services
